# text_to_3d_world_builder

./: .env.example  .gitignore  .gitmodules  README.md
client/: package-lock.json  package.json
client/public/assets/: manifest.json
client/public/assets/models/decor/: hdri_sample.hdr
client/src/: App.css  App.tsx  index.css
client/src/components/: CameraControls.tsx  FirstPersonControls.tsx  Scene.tsx  WorldRenderer.tsx  index.ts
client/src/components/primitives/: GlbEntity.tsx  PrimitiveEntity.tsx  RoomSpace.tsx  index.ts
docs/prd/: planning_mvp.md
docs/trellis2/: INTEGRATION_GUIDE.md  SETUP_GUIDE.md  WORK_LOG.md
scripts/: download_assets.sh  run_server.sh  test_gemini.py  test_run.py  text_to_3d_pipeline.py
server/: main.py  pyproject.toml  requirements.txt
server/routers/: __init__.py  generate.py
server/services/: __init__.py  pipeline.py
shared/schemas/: world-spec.schema.json
shared/types/: world_spec.py  world_spec.ts
